# ocaml-qdrant

./: LICENSE  README.md  dune-project  qdrant.opam
examples/: basic.ml  dune
lib/: dune  qdrant.ml
test/: dune  test_qdrant.ml
